Set max width on dialog filter lists to fix css wrapping issues.

--- a/trunk/css/jquery-ui-grid.css
+++ b/trunk/css/jquery-ui-grid.css
@@ -57,7 +57,8 @@
 }
 
 select.ui-filter-compare-operator {
-	min-width: 130px;	
+	min-width: 130px;
+	max-width: 172px;	
 }
 
 input.ui-filter-val {
@@ -113,7 +114,7 @@ input.ui-filter-val.ui-date-filter {
 .slick-cell .ui-datepicker-trigger {
 	position: relative;
 	top: 2px;
-	left: -2px;
+	left: -2px;	
 }
 
 .ui-grid-sortable {
